--- a/RuSpeak/Views/Post/List.cshtml
+++ b/RuSpeak/Views/Post/List.cshtml
@@ -19,7 +19,7 @@
                     <tr>
                         <td>
                             
-                                <h3>@post.Header</h3>asd
+                                <h3>@post.Header</h3>
                                 @if (@post.AudioContent != null)
                                 {
                                     <audio controls preload="none">
