--- a/RuSpeak/Views/Post/List.cshtml
+++ b/RuSpeak/Views/Post/List.cshtml
@@ -8,6 +8,93 @@
 
 @Scripts.Render("~/Scripts/bootstrap-player.js")
 @Styles.Render("~/Content/bootstrap-player.css")
+<script>
+    $('body').append("<div id='robinzon'><div style='display:table;height:100%;width:100%;'><div style='display:table-cell;vertical-align:middle;width:150px;'></div></div></div>");
+    $("#robinzon").css({
+        "width": "350px",
+        "height": "150px",
+        "background": "none repeat scroll 0% 0% rgba(0, 0, 0, 0.5)",
+        "position": "fixed",
+        "display": "none",
+        "top": "35%",
+        "left": "35%",
+        "z-index": "999",
+        "text-align": "center",
+        "color": "white",
+        "font-family": "Segoe Ui",
+        "font-size": "25px",
+        "font-weight": "100",
+        "padding": "10px",
+        "border-radius": "85px"
+    });
+    var lang = '';
+    var text = '';
+    $(document).click(function () {
+        $(this).dblclick();
+    });
+    $(document).dblclick(function (e) {
+        text = get_selection();
+        if (text != '') {
+            $.ajax({
+                type: "POST",
+                url: 'https://translate.yandex.net/api/v1.5/tr.json/detect?key=trnsl.1.1.20140930T113416Z.039b339af6112dba.40848fe3a1a8160493786e22a60342a50a05cb6b&text=' + text,
+                success: function (response) {
+                    lang = response.lang;
+                    console.log(lang);
+                }
+            });
+            if (lang == 'en') {
+                lang = 'ru';
+            }
+            else {
+                lang = 'en';
+            }
+            var link = 'https://translate.yandex.net/api/v1.5/tr.json/translate?key=trnsl.1.1.20140930T113416Z.039b339af6112dba.40848fe3a1a8160493786e22a60342a50a05cb6b&text=' + text + '&lang=' + lang;
+            text = '';
+            $.ajax({
+                type: 'GET',
+                url: link,
+                success: function (response) {
+                    $("#robinzon div div").text(response.text[0]);
+                    $("#robinzon").show();
+                    setTimeout('$("#robinzon").fadeOut("slow")', 3000);
+                }
+            });
+        }
+    });
+
+    function get_selection() {
+        var txt = '';
+        if (window.getSelection) {
+            txt = window.getSelection();
+        } else if (document.getSelection) {
+            txt = document.getSelection();
+        } else if (document.selection) {
+            txt = document.selection.createRange().text;
+        }
+        return txt;
+    }
+
+    //function ololo(response) {
+    //    alert(response.text[0]);
+    //    }
+
+    //$(document).dblclick(function (e) {
+    //    var t = get_selection();
+
+    //    $.ajax({
+    //        type: 'GET',
+    //        url: 'https://translate.yandex.net/api/v1.5/tr.json/translate?key=trnsl.1.1.20140930T113416Z.039b339af6112dba.40848fe3a1a8160493786e22a60342a50a05cb6b&lang=ru-en&text=' + t,
+    //        success: function (response) {
+    //            ololo(response);
+    //        },
+    //        error: function(xhr, ajaxOptions, thrownError) {
+    //            alert(xhr.status);
+    //            alert(thrownError);
+    //        }
+    //    });
+    //});
+</script>
 
 
 <div class="container">
