--- a/RuSpeak/Views/Shared/_Layout.cshtml
+++ b/RuSpeak/Views/Shared/_Layout.cshtml
@@ -34,7 +34,7 @@
                 </div>
             </div>
         </header>
-        <div id="body">
+        <div class="container" id="body">
             @RenderBody()
         </div>
         @RenderSection("scripts", required: false)
