--- a/RuSpeak/Views/Post/ShowPost.cshtml
+++ b/RuSpeak/Views/Post/ShowPost.cshtml
@@ -1,30 +1,126 @@
-﻿@model RuSpeak.Models.Things.Post
+﻿@using RuSpeak.Models.Things
+@model RuSpeak.Models.Things.Post
 
 @{
     ViewBag.Title = "Show Post";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+<style>
+    .table>tbody>tr>th, .table>tbody>tr>td {
+    border-top: none;
+}
+</style>
 <div class="container">
-    
+    <table class="table">
+        <colgroup>
+            <col span="1" style="width: 82%;">
+            <col span="1" style="width: 18%;">
+        </colgroup>
+        <tbody>
+            <tr>
+                <td>
+                    <h3>@Model.Header</h3>
+                </td>
+                <td>
+                    
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    @if (@Model.AudioContent != null)
+                    {
+                        <audio controls preload="none">
+                            <source src="/Post/AudioStream?audioId=@Model.AudioContent.AudioContentId" type="audio/mpeg" />
+                        </audio>
+                    }
+                    <div>
+                        @Model.Content
+                    </div>
+                </td>
+                <td>
+                    <ul>
+                        <li>
+                            @Html.ActionLink("Удалить", "Delete", "Post", new { id = @Model.PostId}, null)
+                        </li>
+                        <li>
+                            @Html.ActionLink("Изменить", "Edit", "Post", new { postId = @Model.PostId}, null)
+                        </li>
+                        <li>
+                            @Html.ActionLink("Добавить контент", "CreatePiece", "Post", new { postId = @Model.PostId}, null)
+                        </li>
+                        <li>
+                            @Html.ActionLink("Детально", "ShowPost", "Post", new { postId = @Model.PostId}, null)
+                        </li>
+                    </ul>
+                </td>
+            </tr>
+            
+            
+            @if (@Model.Pieces != null)
+            {
+                foreach (var piece in @Model.Pieces)
+                {
+                    
+                    <tr>
+                        <td>
+                            <div>
+                                <h4>@piece.Header</h4>
+                                @piece.Content
+                            </div>
+                        </td>
+                        <td>
+                            <ul>
+                                <li>
+                                    @Html.ActionLink("Изменить", "EditPiece", "Post", new { pieceId = @piece.PieceContentId}, null)
+                                </li>
+                                <li>
+                                    @Html.ActionLink("Удалить", "DeletePiece", "Post", new { pieceId = @piece.PieceContentId, postId = @Model.PostId}, null)
+                                </li>
+                            </ul>
+                        </td>
+                    </tr>
+                }
+            }
 
-<h3>@Model.Header</h3>
-    @if (@Model.AudioContent != null)
-    {
-        <audio controls preload="none">
-            <source src="/Post/AudioStream?audioId=@Model.AudioContent.AudioContentId" type="audio/mpeg" />
-        </audio>
-    }
-<div>
-    @Model.Content
-</div>
-@if (@Model.Pieces != null)
-    {
-        foreach (var piece in @Model.Pieces)
-        {
-            <h4>@piece.Header</h4>
-            <div>
-                @piece.Content
-            </div>
-        }
-    }
+            <tr>
+                <td>
+                    <div style="font-size: 16px; color: red; margin-top: 25px">Комментарии:</div>
+                </td>
+            </tr>
+            @if (@Model.Comments != null && @Model.Comments.Any())
+            {
+                foreach (var comment in @Model.Comments)
+                {
+
+                    <tr style="border-top: solid 1px #cccccc">
+                        <td>
+                            <div >
+                                <div style="color: green">
+                                    @comment.Text
+                                </div>
+                                <div style="font-size: 10px; display: inline; color: orange">
+                                    @comment.UserPosted.UserName
+                                    (@comment.Date)
+                                </div>
+                            </div>
+                        </td>
+                        
+                    </tr>
+                }
+            }
+            else
+            {
+                <tr>
+                    <td>
+                        Комментарии отсутствуют
+                    </td>
+                </tr>
+            }
+            <tr style="border-top: solid 1px #cccccc">
+                <td>
+                     @Html.Action("Create", "Comment", new CommentInfo{PostId = @Model.PostId})
+                </td>
+            </tr>
+        </tbody>
+    </table>
 </div>
